--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 	align-items: center;
 	min-height: 100vh;
 	font-weight: 400;
+	font-family: 'Lexend Deca', sans-serif;
 }
 
 main {
@@ -45,6 +46,7 @@ main {
 	font-weight: 700;
 }
 
+
 .texto {
 	/*padding-left: 2rem;
 	padding-top: 2rem;*/
@@ -55,7 +57,7 @@ main {
 .texto__subtitulo {
 	color: hsla(0, 0%, 100%, 0.75);
 	line-height: 1.5em;
-	margin-top: 5em;
+	margin-top: 1em;
 }
 
 ul {
@@ -95,7 +97,8 @@ ul {
 	top: 5rem;
 	min-width: 200px;	
 	width: 540px;
-	height: 484px;
+	height: 460px;
+	opacity: 0.6;
 
 }
 
